--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "tienda": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "tienda"
+    }
+  },
+  "defaultProject": "tienda",
+  "cli": {
+    "analytics": "8da5c661-62f8-47a3-86cc-5c90a675a9c5"
+  }
 }
